refactoring round 1